add_library(kvell
indexes/cpp-btree/btree_container.h
indexes/cpp-btree/btree_map.h
indexes/cpp-btree/btree_set.h
indexes/cpp-btree/btree.h
indexes/art.c
indexes/art.h
indexes/btree.cc
indexes/btree.h
indexes/memory-item.h
indexes/rax_malloc.h
indexes/rax.c
indexes/rax.h
indexes/rbtree.c
indexes/rbtree.h
indexes/uthash.h
freelist.c
freelist.h
headers.h
in-memory-index-art.c 
in-memory-index-art.h
in-memory-index-btree.c 
in-memory-index-btree.h
in-memory-index-generic.h
in-memory-index-rax.c 
in-memory-index-rax.h
in-memory-index-rbtree.c 
in-memory-index-rbtree.h
ioengine.c
ioengine.h
items.h
options.h
pagecache.c
pagecache.h
random.c
random.h
slab.c
slab.h
slabworker.c
slabworker.h
stats.c
stats.h
utils.c
utils.h
workload-common.c
workload-common.h)
target_include_directories(kvell PUBLIC ${PROJECT_SOURCE_DIR}/kvell)